--- a/ReapeatProject/project.properties
+++ b/ReapeatProject/project.properties
@@ -12,5 +12,6 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=../../../Users/User/Documents/Android Game/Libraries/AndEngine-GLES2
-android.library.reference.2=../../../Users/User/Documents/Android Game/Libraries/AndEnginePhysicsBox2DExtension-GLES2
+android.library.reference.1=..\\..\\..\\Users\\User\\Documents\\Android Game\\Libraries\\AndEngine-GLES2
+android.library.reference.2=..\\..\\..\\Users\\User\\Documents\\Android Game\\Libraries\\AndEnginePhysicsBox2DExtension-GLES2
+android.library.reference.3=../../android-websockets
